Adicionados locais onde comprar componentes.

--- a/aula10/aula10.tex
+++ b/aula10/aula10.tex
@@ -817,7 +817,7 @@ microfone) compre o cabo com $2$ plugs RCA.
 compre o cabo com $3$ plugs RCA
 \end{itemize}
 \pause
-\item Vá em uma loja de eletrônica e compre os materiais.
+\item Vá a uma loja de eletrônica (ver último slide) e compre os materiais.
 \pause
 \item Baixe e execute o Audacity: \url{http://audacity.sourceforge.net}
 \pause
@@ -867,16 +867,24 @@ funcione, mas é necessário saber montar circuitos.
 \frametitle{Projeto de final de semana}
 
 \begin{itemize}
+\item Onde comprar:
+\begin{itemize}
+\item Santo André: R. Gertrudes de Lima, no quarteirão entre as ruas
+      Siqueira Campos e Cel. Francisco Amaro (há umas 4 lojas de eletrônica
+      neste quarteirão)
+\item São Paulo: Ruas transversais à Santa Efigênia, em particular a
+      Rua dos Timbiras.
+\end{itemize}
 \item Se você quer gastar menos, e tiver um fone de ouvido com defeito
 (todo mundo tem um no fundo de alguma gaveta), dá para desencapar o
 cabo do fone e usá-lo para conectar o fototransistor ao computador.
 \begin{itemize}
 \item se você já tiver o cabo, o custo fica em menos de 1 real!
+\end{itemize}
 \item mais informações:
-\end{itemize}
-\end{itemize}
 {\small
 \url{http://jumpjack.wordpress.com/2008/05/20/worlds-cheapest-remote-control-replicator-just-1/}}
+\end{itemize}
 \end{frame}
 
 \end{document}
