corrigindo forma de onda do flipflop RS na aula 13

--- a/aula13/aula13.tex
+++ b/aula13/aula13.tex
@@ -245,13 +245,27 @@ $D$ & $En$ & $Q_i$  \\
 \frametitle{Flip-flop S-R: Diagrama de Forma de Onda}
 
 \hspace*{\fill}%
-\includegraphics[scale=0.9]{images/waveformFlipflopRS}%
+\only<1>{\includegraphics[scale=0.9]{images/waveformFlipflopRS1}}%
+\only<2>{\includegraphics[scale=0.9]{images/waveformFlipflopRS2}}%
+\only<3>{\includegraphics[scale=0.9]{images/waveformFlipflopRS3}}%
+\only<4>{\includegraphics[scale=0.9]{images/waveformFlipflopRS4}}%
+\only<5>{\includegraphics[scale=0.9]{images/waveformFlipflopRS5}}%
+\only<6>{\includegraphics[scale=0.9]{images/waveformFlipflopRS6}}%
+\only<7>{\includegraphics[scale=0.9]{images/waveformFlipflopRS7}}%
+\only<8>{\includegraphics[scale=0.9]{images/waveformFlipflopRS8}}%
+\only<9>{\includegraphics[scale=0.9]{images/waveformFlipflopRS9}}%
+\only<10>{\includegraphics[scale=0.9]{images/waveformFlipflopRS10}}%
+\only<11>{\includegraphics[scale=0.9]{images/waveformFlipflopRS11}}%
+\only<12>{\includegraphics[scale=0.9]{images/waveformFlipflopRS12}}%
+\only<13>{\includegraphics[scale=0.9]{images/waveformFlipflopRS13}}%
+\only<14>{\includegraphics[scale=0.9]{images/waveformFlipflopRS14}}%
+\only<15->{\includegraphics[scale=0.9]{images/waveformFlipflopRS15}}%
 \hspace*{\fill}%
 
 \vspace{-6pt}
 
 \begin{center}
-Sensível à borda de descida do clock!
+\uncover<15>{Sensível à borda de descida do clock!}
 \end{center}
 
 
