--- a/aula17/aula17.tex
+++ b/aula17/aula17.tex
@@ -414,20 +414,74 @@ $Y_0 =$ {\vcolor\hrulefill}\\[16pt]
 
 \newpage
 
+
+Como uma alternativa, você pode usar mapas de Karnaugh para $5$ variáveis.\\[12pt]
+
 \noindent
-\textbf{e)} Obtenha a expressão simplificada para a saída $P$.
+$Y_2 =$ {\vcolor\hrulefill}
+
+\hfill
+\scalebox{1}{
+\begin{Karnaugh}{$B Q_2$}{\raisebox{0.5\baselineskip}{$Q_1 Q_0$}}
+\node at (2,5.5) {$A = 0$};
+\end{Karnaugh}
+}
+\hfill
+\scalebox{1}{
+\begin{Karnaugh}{$B Q_2$}{\raisebox{0.5\baselineskip}{$Q_1 Q_0$}}
+\node at (2,5.5) {$A = 1$};
+\end{Karnaugh}
+}
+\hspace*{\fill}
+
+\noindent
+$Y_1 =$ {\vcolor\hrulefill}
+
+\hfill
+\scalebox{1}{
+\begin{Karnaugh}{$B Q_2$}{\raisebox{0.5\baselineskip}{$Q_1 Q_0$}}
+\node at (2,5.5) {$A = 0$};
+\end{Karnaugh}
+}
+\hfill
+\scalebox{1}{
+\begin{Karnaugh}{$B Q_2$}{\raisebox{0.5\baselineskip}{$Q_1 Q_0$}}
+\node at (2,5.5) {$A = 1$};
+\end{Karnaugh}
+}
+\hspace*{\fill}
+
+\noindent
+$Y_0 =$ {\vcolor\hrulefill}
+
+\hfill
+\scalebox{1}{
+\begin{Karnaugh}{$B Q_2$}{\raisebox{0.5\baselineskip}{$Q_1 Q_0$}}
+\node at (2,5.5) {$A = 0$};
+\end{Karnaugh}
+}
+\hfill
+\scalebox{1}{
+\begin{Karnaugh}{$B Q_2$}{\raisebox{0.5\baselineskip}{$Q_1 Q_0$}}
+\node at (2,5.5) {$A = 1$};
+\end{Karnaugh}
+}
+\hspace*{\fill}
+
+\noindent
+\textbf{e)} Obtenha a expressão simplificada para a saída $P = ${\vcolor\rule{4cm}{0.4pt}}.
+
+\vspace{-6pt}
 
 \begin{center}
-$P =$ \rule{4cm}{0.4pt}
-\end{center}
-
-\begin{center}
-\scalebox{1.25}{
+\scalebox{1.15}{
 \begin{Karnaughvuit}{$Q_2$}{\raisebox{0.5\baselineskip}{$Q_1 Q_0$}}
   
 \end{Karnaughvuit}
 }
 \end{center}
+
+\vspace{-18pt}
 
 \noindent
 \textbf{f)} Construa o circuito da máquina de estados na próxima página.
